@@ -1,0 +1,4 @@
+# -*- Mode: Python -*-
+# vi:si:et:sw=4:sts=4:ts=4
+
+from zope.interface import Interface
